feat: improve some tools