@@ -1,8 +1,10 @@
 package prerna.reactor.agent.mcp.tools;
 
 import java.io.File;
-import java.util.Arrays;
+import java.io.IOException;
+import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import prerna.reactor.AbstractReactor;
 import prerna.sablecc2.om.PixelDataType;
@@ -12,16 +14,24 @@ public class ListRoomFilesReactor extends AbstractReactor {
 
   @Override
   public NounMetadata execute() {
-    File roomFolder = new File(insight.getInsightFolder());
+    Path roomPath = new File(insight.getInsightFolder()).toPath();
 
-    List<String> fileArr =
-        Arrays.stream(roomFolder.listFiles()).filter(File::isFile).map(File::getName).toList();
+    List<String> fileList;
+    try {
+      fileList = RoomFileUtils.collectVisibleFiles(roomPath).stream()
+          .map(p -> roomPath.relativize(p).toString())
+          .collect(Collectors.toList());
+    } catch (IOException e) {
+      throw new IllegalArgumentException("Unable to list room files: " + e.getMessage());
+    }
 
-    return new NounMetadata(fileArr, PixelDataType.MAP);
+    return new NounMetadata(fileList, PixelDataType.MAP);
   }
 
   @Override
   public String getReactorDescription() {
-    return "Lists all files in the room - no directories. No parameters are required.";
+    return "Lists all files in the room recursively, including files in subdirectories. "
+        + "Paths are relative to the room folder. Hidden directories and files (starting with '.') "
+        + "are always excluded.";
   }
 }
